data/all_generated_tests/raw_wast_tests/br_table_InfiniteLoops_2197.wast
;; 7. **Test 7: Backward Branching in Loops**    - Description: Implement a loop with `br_table` instructions that backward branch, reinitializing the loop.    - Specific Constraint: Validate backward branches to ensure correct operand handling and block entry.    - Infinite Loop Relation: Misconfigured backward branches might cause perpetual loop re-initiation, resulting in an infinite loop.

(assert_invalid
  (module
    (func $backward-branch-loop
      (loop $outer
        (block $inner
          (i32.const 1)
          (br_table $outer $inner (i32.const 0))
        )
      )
    )
  )
  "type mismatch"
)